@@ -4,10 +4,10 @@ INCLUDES = @INCLUDES@ -I.. -I$(top_srcdir) -I$(top_srcdir)/lib
 DEFS = @DEFS@ $(LOCAL_OPTS) -DSYSCONFDIR=\"$(sysconfdir)/\"
 INSTALL_SDATA=@INSTALL@ -m 600
 
-lib_LIBRARIES = libospf.a
+lib_LTLIBRARIES = libospf.la
 sbin_PROGRAMS = ospfd
 
-libospf_a_SOURCES = \
+libospf_la_SOURCES = \
 	ospfd.c ospf_zebra.c ospf_interface.c ospf_ism.c ospf_neighbor.c \
 	ospf_nsm.c ospf_dump.c ospf_network.c ospf_packet.c ospf_lsa.c \
 	ospf_spf.c ospf_route.c ospf_ase.c ospf_abr.c ospf_ia.c ospf_flood.c \
@@ -25,10 +25,9 @@ noinst_HEADERS = \
 	ospf_zebra.h ospf_spf.h ospf_route.h ospf_ase.h ospf_abr.h ospf_ia.h \
 	ospf_flood.h ospf_snmp.h ospf_te.h ospf_vty.h ospf_apiserver.h
 
-ospfd_SOURCES = \
-	ospf_main.c $(libospf_a_SOURCES)
+ospfd_SOURCES = ospf_main.c
 
-ospfd_LDADD = -L../lib -lzebra @LIBCAP@
+ospfd_LDADD = libospf.la -L../lib -lzebra @LIBCAP@
 
 EXTRA_DIST = OSPF-MIB.txt OSPF-TRAP-MIB.txt ChangeLog.opaque.txt
 
