@@ -1,3 +1,7 @@
+2004-07-01  Greg Troxel  <gdt@fnord.ir.bbn.com>
+
+	* Makefile.am (lib_LTLIBRARIES): make libospf shared
+
 2004-06-30  Greg Troxel  <gdt@poblano.ir.bbn.com>
 
 	* Makefile.am: Add shlib support.
